--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
 <body>
 <div class="inputform">
 	<h1 class="text">MARS ROVER!</h1>
-	<form action="" method="post">
+	<form action="" method="post" onsubmit="return false">
 		<p class="text">Type in directions (F, B, R, L):</p><input type="text" placeholder="F, B, R, L" name="userInput" id="userInput">
-		<button onclick="moveRover()">Send movement to rover</button>
+		<button onclick="getUserinput()">Send movement to rover</button>
+		<button onclick="goForward(myRover)"> F </button>
+		<button onclick="goBackward(myRover)"> B </button>
+		<button onclick="turnRoverLeft(myRover)"> L </button>
+		<button onclick="turnRoverRight(myRover)"> R </button>
 	</form>
 </div>
 
