--- a/index.html
+++ b/index.html
@@ -10,14 +10,13 @@
 	<form action="" method="post" onsubmit="return false">
 		<p class="text">Type in directions (F, B, R, L):</p><input type="text" placeholder="F, B, R, L" name="userInput" id="userInput">
 		<button onclick="getUserinput()">Send movement to rover</button>
-		<button onclick="goForward(myRover)"> F </button>
+		<!-- <button onclick="goForward(myRover)"> F </button>
 		<button onclick="goBackward(myRover)"> B </button>
 		<button onclick="turnRoverLeft(myRover)"> L </button>
-		<button onclick="turnRoverRight(myRover)"> R </button>
+		<button onclick="turnRoverRight(myRover)"> R </button> -->
 	</form>
 </div>
 
 
-<script type="text/javascript" src="rover.js"></script>
 </body>
 </html>
