--- a/index.html
+++ b/index.html
@@ -15,7 +15,11 @@
 		<button onclick="turnRoverLeft(myRover)"> L </button>
 		<button onclick="turnRoverRight(myRover)"> R </button> -->
 	</form>
+	<div class="feedback" id="roverPosition"><p></p></div>
+	<div class="feedback" id="roverDirection"><p></p></div>
+
 </div>
+
 
 
 </body>
