--- a/index.html
+++ b/index.html
@@ -10,14 +10,8 @@
 	<form action="" method="post" onsubmit="return false">
 		<p class="text">Type in directions (F, B, R, L):</p><input type="text" placeholder="F, B, R, L" name="userInput" id="userInput">
 		<button onclick="getUserinput()">Send movement to rover</button>
-		<!-- <button onclick="goForward(myRover)"> F </button>
-		<button onclick="goBackward(myRover)"> B </button>
-		<button onclick="turnRoverLeft(myRover)"> L </button>
-		<button onclick="turnRoverRight(myRover)"> R </button> -->
 	</form>
-	<div class="feedback" id="roverPosition"><p></p></div>
-	<div class="feedback" id="roverDirection"><p></p></div>
-
+	<div class="feedback" id="roverPosition"></div>
 </div>
 
 
