done with obstacle

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<button onclick="getUserinput()">Send movement to rover</button>
 	</form>
 	<div class="feedback" id="roverPosition"></div>
+	<div class="feedback" id="canyon"></div>
+
 </div>
 
 
